crates/brasa_hir/tests/snapshots/lowering__pipe_into_bare_callable.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let d
  Call
    Field(filter)
      Ident(foo)
    Ident(x)
