crates/brasa_hir/tests/snapshots/lowering__pipe_into_call.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let a
  Call
    Ident(add)
    Int(1)
    Int(2)
    Int(3)
