crates/brasa_hir/tests/snapshots/lowering__pipe_into_method.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let b
  Call
    Field(map)
      VectorLit
        Int(1)
        Int(2)
    Lambda(x)
      Binary(+)
        Ident(x)
        Int(1)
