crates/brasa_hir/tests/snapshots/lowering__pipe_into_qualified_call.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let b
  Call
    Field(helper)
      Ident(foo)
    Ident(x)
    Ident(y)
